<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentInformacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fotoInicioSesion"
                android:layout_width="138dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/_rbol_abstracto_del_vector_logotipo_en_c_rculo_emblema_dise_o_icono_de_la_hoja_aislado_el_concepto_blanco_respetuoso_medio_141367082" />

            <TextView
                android:id="@+id/informacionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="Información Disponible"
                android:textColor="@color/md_grey_700"
                android:textSize="30dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="362dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/informacionAdicional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/InformacionAdicional1"
                    android:textColor="@color/md_grey_700"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/informacionAdicional2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/InformacionAdicional2"
                    android:textColor="@color/md_grey_700"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/informacionAdicional3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/InformacionAdicional3"
                    android:textColor="@color/md_grey_700"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/aceptar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/md_green_700"
            android:text="@string/Aceptar"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            app:cornerRadius="30dp" />

    </LinearLayout>

</FrameLayout>